📱 Fix Nav on Mobile

--- a/src/base.css
+++ b/src/base.css
@@ -7,6 +7,7 @@
 }
 
 .btn {
+    background-color: inherit;
     font-family: inherit;
     padding: 0.6em 1.3em;
     cursor: pointer;
